# agripro

./: .env.example  .gitignore  ARCHITECTURE.md  AgriScheme_Pro_Product_Specification.docx  CHANGELOG.md  FEATURE_ROADMAP.md  IMPLEMENTATION_PLAN.md  INSTALL_APK.md  KYC_IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-pwa.yml  deploy-services.yml  deploy.yml
apps/mobile/: .detoxrc.js  .env.production  .eslintrc.js  .gitignore  E2E_TEST_REPORT.md  RELEASE.md  TESTID_IMPLEMENTATION.md  app.json  babel.config.js  build-release.sh  eas.json  jest.config.js  jest.setup.js  metro.config.js  package.json  tsconfig.json  workbox-config.js
apps/mobile/.maestro/: complete-e2e-flow.yaml  config.yaml  main-flow.yaml
apps/mobile/app/: +html.tsx  _layout.tsx  index.tsx  legal.tsx  notifications.tsx  support.tsx
apps/mobile/e2e/: jest.config.js  tsconfig.json
apps/mobile/public/: index.html  manifest.json  sw-register.js
apps/mobile/twa/: .gitignore  build-twa.sh  generate-assetlinks.sh  settings.gradle  twa-manifest.json
apps/web-admin/: package.json
docs/: API_GATEWAY_SETUP.md  LOCAL_TEST_RESULTS.md  MIGRATION_GUIDE.md  TESTING_API_GATEWAY.md
docs/deployment/: coolify-deployment-plan.md  coolify-ui-service-deployment-guide.md
infrastructure/databases/: Dockerfile  docker-compose.yml  init-databases.sh
infrastructure/docker/: prometheus.yml
infrastructure/docker/traefik/: traefik.yml
infrastructure/gateway/: COOLIFY_TRAEFIK_LABELS.md  DEPLOYMENT_GUIDE.md  README.md  SERVICE_LABELS.md  docker-compose.yml
infrastructure/gateway/nginx/: deploy-update.sh  docker-compose.yml  nginx.conf
infrastructure/kubernetes/base/: auth-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
infrastructure/pwa/: Caddyfile  assetlinks.json  deploy.sh  docker-compose.yml
scripts/: start-services.sh
scripts/deploy/: .gitignore  01-server-setup.sh  02-install-coolify.sh  03-configure-dns.sh  04-deploy-databases.sh  05-deploy-infrastructure.sh  06-deploy-services.sh  07-configure-monitoring.sh  08-run-migrations.sh  README.md  check-service-logs.sh  cleanup-services.sh  coolify-helper.sh  deploy-missing-databases.sh  deploy-services-api.sh  deploy-services-compose.sh  deploy-services-coolify-api.sh  deploy-with-gateway.sh  deploy.sh  list-services.sh  redeploy-services.sh  set-env-vars.sh  trigger-deployments.sh
scripts/deploy/utils/: common.sh
services/ai/: pyproject.toml
services/auth/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/auth/app/: __init__.py  main.py
services/auth/app/api/: __init__.py  admin.py  auth.py  deps.py  users.py
services/auth/app/core/: config.py  database.py  logging.py  security.py
services/auth/app/middleware/: __init__.py  tenant.py
services/auth/app/models/: __init__.py  user.py
services/auth/app/schemas/: __init__.py  admin.py  auth.py  user.py
services/auth/app/services/: audit_service.py  auth_service.py  login_tracker.py  password_service.py  rbac_service.py  totp_service.py  user_service.py
services/auth/migrations/: env.py
services/auth/migrations/versions/: 3ed842439bee_initial_auth_tables.py  c6db774423f0_add_security_tables.py  d7e8f9a0b1c2_add_phone_pin_auth.py
services/compliance/: pyproject.toml
services/farm/: pyproject.toml
services/farm/app/: main.py
services/farmer/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/farmer/app/: __init__.py  main.py
services/farmer/migrations/: env.py
services/financial/: pyproject.toml
services/gis/: pyproject.toml
services/integration/: pyproject.toml
services/inventory/: Dockerfile  pyproject.toml
services/iot/: pyproject.toml
services/livestock/: Dockerfile  pyproject.toml
services/market/: pyproject.toml
services/notification/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/notification/app/: main.py
services/notification/app/api/: __init__.py  notifications.py  preferences.py
services/notification/app/core/: config.py  database.py  db_types.py
services/notification/app/models/: notification.py
services/notification/app/schemas/: notification.py
services/notification/app/services/: notification_service.py  seed_templates.py  sms_service.py  web_push_service.py
services/notification/migrations/: env.py
services/notification/migrations/versions/: 001_initial_notification_tables.py
services/task/: docker-entrypoint.sh  pyproject.toml
services/task/app/: main.py
services/task/app/api/: __init__.py  tasks.py
services/task/app/core/: config.py  database.py
services/task/app/models/: __init__.py  task.py
services/task/app/schemas/: task.py
services/task/app/services/: task_service.py
services/task/migrations/: README  env.py
services/task/migrations/versions/: 001_initial_task_tables.py
services/traceability/: pyproject.toml
(+201 files in other folders)
