[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agrischeme-pro"
version = "0.1.0"
description = "AgriScheme Pro - Farm Management Information System"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AgriScheme Team" }
]

# Note: Each service has its own virtual environment
# Use `cd services/<name> && uv pip install -e ".[dev]"` to install

[tool.uv.sources]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E402",    # module level import not at top (circular import workarounds)
    "E501",    # line too long
    "E711",    # comparison to None (SQLAlchemy == None is intentional)
    "E712",    # comparison to True/False (required by SQLAlchemy filters)
    "B008",    # function call in default argument (FastAPI Depends)
    "B009",    # do not call getattr with a constant attribute value
    "B010",    # do not call setattr with a constant attribute value
    "B904",    # raise from in except (FastAPI HTTPException pattern)
    "ARG001",  # unused function argument (FastAPI dependency injection)
    "ARG002",  # unused method argument (placeholder implementations)
    "F841",    # local variable assigned but never used (WIP code)
    "SIM102",  # collapsible if (readability preference)
    "SIM103",  # return condition directly (readability preference)
    "SIM105",  # contextlib.suppress (readability preference)
    "SIM108",  # ternary operator (readability preference)
    "SIM114",  # combine if branches (readability preference)
    "SIM118",  # use key in dict (readability preference)
    "UP042",   # str, Enum -> StrEnum (keep compat with Python <3.11 patterns)
    "C408",    # unnecessary dict call (readability preference)
    "C420",    # unnecessary dict comprehension (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
