[project]
name = "notification-service"
version = "0.1.0"
description = "Notification Service for AgriScheme Pro"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "africastalking>=1.2.5",
    "pywebpush>=2.0.0",
    "py-vapid>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
